Fixed UI alignment

--- a/public/css/styleFilters.css
+++ b/public/css/styleFilters.css
@@ -474,10 +474,10 @@ a:not([href]):not([tabindex]){
   border-top-left-radius: 44px;
 }
 
-#circle-user-info {
-  background: lightgray;
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  padding: 0;
-}
+/*#circle-user-info {*/
+  /*background: lightgray;*/
+  /*width: 180px;*/
+  /*height: 180px;*/
+  /*border-radius: 50%;*/
+  /*padding: 0;*/
+/*}*/
